--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,84 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+:root {
+  /* Dark theme color palette */
+  --primary-color: #1e90ff; /* Bright blue for accents */
+  --secondary-color: #005a9e; /* Darker blue for secondary accents */
+  --background-color: #121212; /* Dark background color */
+  --text-color: #e0e0e0; /* Light gray for text */
+  --header-font: 'Arial', sans-serif;
+  --body-font: 'Verdana', sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  font-family: var(--body-font);
+  margin: 0;
+  padding: 0;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.theme-toggle-button, .home-button {
+  position: fixed;
+  top: 10px;
+  background: none;
+  border: none;
+  color: #1e90ff;
+  cursor: pointer;
+  padding: 8px;
+  font-size: 1.2em;
+  transition: color 0.3s ease;
 }
 
-.card {
-  padding: 2em;
+
+/* themee button, home button */
+.theme-toggle-button:hover, .home-button:hover {
+  color: #87cefa;
 }
 
-.read-the-docs {
-  color: #888;
+.theme-toggle-button {
+  right: 10px;
+}
+
+.home-button {
+  left: 10px;
+}
+
+
+/* Dark Theme */
+.dark-theme {
+  background-color: #121212; /* Dark background */
+  color: #e0e0e0; /* Light text */
+}
+
+.dark-theme .light-theme-button {
+  background-color: #ffffff;
+  color: #1e90ff;
+}
+
+.dark-theme .light-theme-button:hover {
+  background-color: #1e90ff;
+  color: white;
+  border-color: #005a9e;
+}
+
+/* Light Theme */
+.light-theme {
+  background-color: #ffffff; /* Light background */
+  color: #333333; /* Dark text */
+}
+
+.light-theme .light-theme-button {
+  background-color: #f0f0f0;
+  color: #1e90ff;
+}
+
+.light-theme .light-theme-button:hover {
+  background-color: #1e90ff;
+  color: white;
+  border-color: #005a9e;
 }
