--- a/client/src/pages/styles/LandingPage.css
+++ b/client/src/pages/styles/LandingPage.css
@@ -1,7 +1,7 @@
 /* General page styling */
 .landing-page {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 3rem;
   padding-inline: 50px;
   color: white;
 }
@@ -153,4 +153,16 @@
   to {
     opacity: 1;
   }
+}
+
+@media (max-width: 768px) {
+
+  .landing-page {
+    padding-inline: 1rem;
+  }
+
+  .landing-page section {
+    padding-inline: 20px;
+  }
+  
 }
