--- a/client/src/pages/styles/LandingPage.css
+++ b/client/src/pages/styles/LandingPage.css
@@ -1,8 +1,8 @@
 /* General page styling */
 .landing-page {
   font-family: Arial, sans-serif;
-  padding: 3rem;
-  padding-inline: 50px;
+  padding: 1rem;
+  padding-inline: 8rem;
   color: white;
 }
 
