--- a/client/src/pages/styles/TreatiesPage.css
+++ b/client/src/pages/styles/TreatiesPage.css
@@ -1,7 +1,7 @@
 
 .treaties-page {
     padding: 20px;
-    padding-inline: 50px;
+    padding-inline: 8rem;
     margin: 0 auto;
     color: #e0e0e0;
     animation: fadeIn 1s ease-in-out;
