--- a/client/src/pages/styles/ResourcesPage.css
+++ b/client/src/pages/styles/ResourcesPage.css
@@ -64,6 +64,7 @@
   color: #1e90ff;
   text-decoration: none;
   transition: color 0.3s ease;
+  font-weight: bold;
 }
 
 .resource-section li a:hover {
