--- a/client/src/pages/styles/TreatiesPage.css
+++ b/client/src/pages/styles/TreatiesPage.css
@@ -2,6 +2,7 @@
 .treaties-page {
     padding: 20px;
     padding-inline: 8rem;
+    padding-bottom: 0px;
     margin: 0 auto;
     color: #e0e0e0;
     animation: fadeIn 1s ease-in-out;
