--- a/client/src/pages/styles/AboutPage.css
+++ b/client/src/pages/styles/AboutPage.css
@@ -2,6 +2,7 @@
 .about-page {
     padding: 20px;
     padding-inline: 12rem;
+    padding-bottom: 0px;
     margin: 0 auto;
     color: #e0e0e0;
     font-family: Arial, sans-serif;
