--- a/client/src/pages/styles/ResourcesPage.css
+++ b/client/src/pages/styles/ResourcesPage.css
@@ -5,6 +5,7 @@
   font-family: Arial, sans-serif;
   padding: 20px;
   padding-inline: 50px;
+  padding-bottom: 0px;
   animation: fadeIn 1s ease-in-out;
 }
 
