--- a/client/src/pages/styles/ResourcesPage.css
+++ b/client/src/pages/styles/ResourcesPage.css
@@ -4,7 +4,7 @@
 .resources-page {
   font-family: Arial, sans-serif;
   padding: 20px;
-  padding-inline: 50px;
+  padding-inline: 10%;
   padding-bottom: 0px;
   animation: fadeIn 1s ease-in-out;
 }
