--- a/client/src/pages/styles/AboutPage.css
+++ b/client/src/pages/styles/AboutPage.css
@@ -90,6 +90,11 @@
     100% { opacity: 1; }
   }
   
+  @media (max-width: 1100px){
+    .about-page section {
+      padding-inline: 3rem;
+    }
+  }
 
   @media (max-width: 758px){
     .about-page {
