--- a/client/src/pages/styles/LandingPage.css
+++ b/client/src/pages/styles/LandingPage.css
@@ -156,14 +156,15 @@
   }
 }
 
+@media (max-width: 1100px){
+  .landing-page section {
+    padding-inline: 3rem;
+  }
+}
+
 @media (max-width: 768px) {
 
   .landing-page {
     padding-inline: 1rem;
   }
-
-  .landing-page section {
-    padding-inline: 20px;
-  }
-  
 }
